Fix Terracotta Tests